k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: roletask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sadokaziz/roletask-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8094
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: roletask
spec:
  selector:
    app: backend
  ports:
    - port: 8094
      targetPort: 8094
  type: ClusterIP
