k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: roletask
spec:
  selector:
    app: backend
  ports:
    - port: 8094
      targetPort: 8094
  type: ClusterIP
